--- a/_posts/2024-06-19-cities.md
+++ b/_posts/2024-06-19-cities.md
@@ -20,9 +20,21 @@ Johannesburg 🇿🇦\
 Chicago 🇺🇸\
 London 🇬🇧\
 
-People often ask me which of these cities is my favourite. I think that is as difficult as asking who's your favourite person in the world. Some people might have a definite answer, but not me :)
+#### Unofficial Ratings
 
-Cities, like people, are constantly evolving. I too, as an individual, am constantly evolving. A city which I like today might not be a city I like in the future. Further, a city that liked me at a certain point in time might not like me back in the future.
+Best food 🥘: Bangalore/Delhi
 
-So as of today, the world's my oyster!
+Best weather ☀️: Singapore/Colombo
+
+Worst weather ❄️: Chicago
+
+Most comfortable : Singapore
+
+Most fun 🕺: Chicago/Bangalore
+
+Most beautiful 🌳: Johannesburg
+
+Best transport 🚄: London/Singapore
+
+Most character 🕰️: Mumbai/Kolkata
  
